<resources>
    <string name="app_name">Anchor Books</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="poster">Imagen de Portada</string>
    <string name="ctd_paginas">Ctd Páginas</string>
    <string name="titulo">Título</string>
    <string name="lenguaje">Lenguaje</string>
    <string name="autor">Autor</string>
    <string name="despacho">Despacho</string>
    <string name="compralo">¡Cómpralo!</string>

    // Placeholders
    <string name="pages_ph">%d páginas</string>
    <string name="price_ph">$%d</string>
    <string name="delivery_ph">, %s</string>
    <string name="subject_ph">Consulta por libro %s id %d</string>

</resources>