<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:orientation="horizontal"
    android:background="@color/ducky">
    <LinearLayout
        android:id="@+id/leftContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/coverDetailImageView"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:contentDescription="@string/poster"
            android:src="@drawable/cover"
            android:adjustViewBounds="true"/>
        <TextView
            android:id="@+id/pagesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/ctd_paginas"
            android:textAlignment="center"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/rightContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toEndOf="@id/leftContainer"
        android:paddingStart="20dp">
        <TextView
            android:id="@+id/titleDetailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/autorDetailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/autor"
            android:textSize="18sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/priceDetailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Precio"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/deliveryTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/despacho"
                android:textSize="20sp"/>
        </LinearLayout>
        <Button
            android:id="@+id/buyItButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/compralo"/>

    </LinearLayout>
</RelativeLayout>