<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:elevation="4dp"
    android:clickable="true"
    android:focusable="true"
    card_view:cardCornerRadius="6dp"
    card_view:cardElevation="6dp"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:animateLayoutChanges="true"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/frontImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cover"
            android:adjustViewBounds="true"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="6dp"
            android:layout_toEndOf="@id/frontImageView">
            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo"
                android:textSize="26dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp" />
            <TextView
                android:id="@+id/authorTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/autor"/>
            <TextView
                android:id="@+id/languageTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="italic"
                android:text="@string/lenguaje"/>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>